@@ -25,16 +25,17 @@ basis("Cl-", log10(NaCl$m_Cl))
 # Calculate affinity with changing basis species
 bases <- c("H2S", "HS-", "HSO4-", "SO4-2")
 m <- mosaic(bases, pH = c(2, 10, res), O2 = c(-41, -29, res), T = T, P = P, IS = NaCl$IS, blend = blend)
-# Show predominance fields
-diagram(m$A.bases, col = "red", col.names = "red", lty = 2, italic = TRUE)
-diagram(m$A.species, add=TRUE, col = "blue", col.names = "blue", lwd = 2, bold = TRUE)
+# Show predominance fields for S-species
+diagram(m$A.bases, col = 4, col.names = 4, lty = 2, italic = TRUE)
+# Show predominance fields for Au-species
+diagram(m$A.species, add=TRUE, col = 2, col.names = 2, lwd = 2, bold = TRUE)
 
 # Calculate and plot solubility of Au (use named 'bases' argument to trigger mosaic calculation)
 species("Au")
 s <- solubility(iaq, bases = bases, pH = c(2, 10, res), O2 = c(-41, -29, res), T = T, P = P, IS = NaCl$IS, blend = blend)
 # Convert to ppb
 s <- convert(s, "ppb")
-diagram(s, type = "loga.balance", levels = c(1, 10, 100, 1000), add = TRUE)
+diagram(s, levels = c(1, 10, 100, 1000), add = TRUE)
 # Add legend and title
 dP <- describe.property(c("T", "P"), c(250, 500))
 legend("top", dP, bty = "n", inset = c(0, 0.06))
